--- a/snake.html
+++ b/snake.html
@@ -88,6 +88,7 @@ window.onload = function() {
 
 		// sets framecheck to false because we are moving to the next frame, this is in order to stop someone from giving to commands in the same frame
 		frameCheck = false;
+		canvas.width = canvas.width;
 	}, 1000 / FRAMES_PER_SECOND);
 	
 	// adds the key event listener that allows the user to input the directional commands
